<resources>
    <string name="app_name">蓝牙</string>
    <string name="bleDevice1_tip">蓝牙设备1:</string>
    <string name="bleDevice2_tip">蓝牙设备2:</string>
    <string name="bleDevice3_tip">蓝牙设备3:</string>
    <string name="rssi">rssi:</string>
    <string name="scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="calculate">计算结果</string>
    <string name="room_x_tip">房间x轴长度(m):</string>
    <string name="room_y_tip">房间y轴长度(m):</string>
    <string name="location_tip">您的位置:</string>
</resources>
