<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/bleDevice1_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bleDevice1_tip"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/bleDevice1_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="未就绪"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="50dp"
                android:paddingStart="50dp"
                android:text="@string/rssi"/>
            <TextView
                android:id="@+id/bleDevice1_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/bleDevice2_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bleDevice2_tip"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/bleDevice2_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="未就绪"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="50dp"
                android:paddingStart="50dp"
                android:text="@string/rssi"/>
            <TextView
                android:id="@+id/bleDevice2_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/bleDevice3_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bleDevice3_tip"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/bleDevice3_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="未就绪"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="50dp"
                android:paddingStart="50dp"
                android:text="@string/rssi"/>
            <TextView
                android:id="@+id/bleDevice3_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"/>
            <Button
                android:id="@+id/stop_scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <TextView
                android:id="@+id/location_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_tip"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingStart="40dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <com.nuaa.bluetoothlocation.MapView
            android:id="@+id/map_view"
            android:layout_margin="20dp"
            android:layout_width="200dp"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>
